--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,7 +16,7 @@
                     <a class="nav-link onhover" routerLink="/home" routerLinkActive="active">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/skill" routerLinkActive="active">Skills</a>
+                    <a class="nav-link" routerLink="/skill" routerLinkActive="active">My Skills</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/project" routerLinkActive="active">Projects</a>
