--- a/src/app/skill/skill.component.html
+++ b/src/app/skill/skill.component.html
@@ -51,7 +51,10 @@
             </div>
         </div>
     </div>
-</div>-->
+</div>
+
+
+//From Youtube
 <div class="card" *ngFor="let item of courses">
     <div class="imgBx">
         <img src="../../assets/image/{{ item.img }}" class="card-img-top" alt="...">
@@ -60,5 +63,60 @@
         <div class="details">
             <h2>{{front.name}}</h2>
         </div>
+    </div>
+</div>-->
+<h5>Frontend</h5>
+<div class="wrap">
+    <div class="bar">
+        <h3>HTML5 <abbr>90%</abbr></h3>
+        <span></span>
+    </div>
+    <div class="bar">
+        <h3>Css3 <abbr>90%</abbr></h3>
+        <span></span>
+    </div>
+    <div class="bar">
+        <h3>Scss <abbr>80%</abbr></h3>
+        <span></span>
+    </div>
+    <div class="bar">
+        <h3>Javascript <abbr>85%</abbr></h3>
+        <span></span>
+    </div>
+    <div class="bar">
+        <h3>TypeScript <abbr>80%</abbr></h3>
+        <span></span>
+    </div>
+    <div class="bar">
+        <h3>Bootstrap 5 <abbr>80%</abbr></h3>
+        <span></span>
+    </div>
+    <div class="bar">
+        <h3>Angular <abbr>60%</abbr></h3>
+        <span></span>
+    </div>
+</div>
+
+<h5 class="back">Backend</h5>
+<div class="wrapBack">
+    <div class="bar">
+        <h3>PHP <abbr>90%</abbr></h3>
+        <span></span>
+    </div>
+    <div class="bar">
+        <h3>Symfony <abbr>60%</abbr></h3>
+        <span></span>
+    </div>
+    <div class="bar">
+        <h3>AJAX <abbr>60%</abbr></h3>
+        <span></span>
+    </div>
+    <div class="bar">
+        <h3>API <abbr>60%</abbr></h3>
+        <span></span>
+    </div>
+    <div class="bar">
+        <h3>MySql <abbr>85%</abbr></h3>
+        <span></span>
     </div>
 </div>
