Frontend Project added

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
                     <a class="nav-link" routerLink="/skill" routerLinkActive="active">My Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/project" routerLinkActive="active">Projects</a>
+                    <a class="nav-link" routerLink="/projects" routerLinkActive="active">Projects</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/test" routerLinkActive="test">Projects</a>
