--- a/src/app/skill/skill.component.css
+++ b/src/app/skill/skill.component.css
@@ -1,4 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
+}
+
 .card {
   margin-top: 5rem;
   position: relative;
