--- a/src/app/skill/skill.component.scss
+++ b/src/app/skill/skill.component.scss
@@ -3,6 +3,15 @@ $backGr-main:#0a192f;
 $fontColor-first: #ccd6f6;
 $greencolor:#64ffda;
 $color-white:#fff;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: normal;
+}
+
 .card {
     margin-top: 5rem;
     position: relative;
