--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -15,7 +15,7 @@
         <img class="shape1" src="../../assets/image/shape.png">
         <img class="shape2" src="../../assets/image/shape.png">
         <img class="shape3" src="../../assets/image/shape.png">
-        <!--<img class="shape4" src="../../assets/image/shape.png">-->
+        <img class="shape4" src="../../assets/image/shape.png">
         <img class="shape5" src="../../assets/image/shape.png">
     </div>
     <div class="home-inner">
@@ -23,7 +23,7 @@
             <h5>Full-Stack Developer</h5>
             <h1>Nazila</h1>
             <p>I’m a Computer software engineer and i have 10 years experience in programming in my home country IRAN.<br> Currently,as Web-Developer i’m focused on Frontend and Backend.</p>
-            <a href="#" class="btn">Learn about me</a>
+            <a href="/projects" class="btn">My Works</a>
 
         </div>
         <img src="../../assets/image/iam.png">
