--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,13 +1,13 @@
 <h5>My Works</h5>
 <div class="row row-cols-md-2 row-cols-lg-3">
-    <div class="col-6">
+    <div class="col">
         <div class="card">
             <div class="imgBx">
                 <img src="../../assets/image/foodBlog.png" class="card-img-top" alt="...">
             </div>
             <div class="content">
                 <div class="details">
-                    <h2>Food-Blog<br><span>A mobile-friendly website for food blogs</span></h2>
+                    <h2>Food-Blog<br><span>A mobile-friendly food blogs</span></h2>
                     <div class="actionBtn">
                         <button><a href="https://nazilaaz.github.io/FE18-CR1-Nazila-AZABDAFTAR/">Show more</a></button>
                     </div>
@@ -23,7 +23,7 @@
             </div>
             <div class="content">
                 <div class="details">
-                    <h2>My Weekly Planner<br><span>A list of Tasks for a “My Weekly Planner”</span></h2>
+                    <h2>My Weekly Planner<br><span>A list of Tasks</span></h2>
                     <div class="actionBtn">
                         <button><a href="https://nazilaaz.github.io/FE18-CR2-Nazila-AZABDAFTAR/">Show more</a></button>
                     </div>
@@ -39,7 +39,7 @@
             </div>
             <div class="content">
                 <div class="details">
-                    <h2>Delivery-Restaurant<br><span>A Delivery page for best Restaurant, using Angular</span></h2>
+                    <h2>Delivery-Restaurant<br><span>Delivery page</span></h2>
                     <div class="actionBtn">
                         <button><a href="https://nazilaaz.github.io/FE18-CR3-Nazila-AZABDAFTAR/">Show more</a></button>
                     </div>
@@ -47,5 +47,50 @@
 
             </div>
         </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <div class="imgBx">
+                <img src="../../assets/image/adoptapet.png" class="card-img-top" alt="...">
+            </div>
+            <div class="content">
+                <div class="details">
+                    <h2>Adopt a Pet<br><span>Adopt a Pet</span></h2>
+                    <div class="actionBtn">
+                        <button><a href="https://nazila.codefactory.live/Adopt-a-Pet/">Show more</a></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <div class="imgBx">
+                <img src="../../assets/image/Biglibrary.png" class="card-img-top" alt="...">
+            </div>
+            <div class="content">
+                <div class="details">
+                    <h2>Big Library<br><span>Big Library web application</span></h2>
+                    <div class="actionBtn">
+                        <button><a href="https://nazila.codefactory.live/BigLibrary/">Show more</a></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <!--<div class="card">
+            <div class="imgBx">
+                <img src="../../assets/image/Biglibrary.png" class="card-img-top" alt="...">
+            </div>
+            <div class="content">
+                <div class="details">
+                    <h2>Vienna Event Managemet<br><span>Track Events</span></h2>
+                    <div class="actionBtn">
+                        <button><a href="https://nazila.codefactory.live/BigLibrary/">Show more</a></button>
+                    </div>
+                </div>
+            </div>
+        </div>-->
     </div>
 </div>
