--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -73,11 +73,11 @@ h6 {
         img {
             position: absolute;
             width: 100%;
-            z-index: -9;
+            z-index: -1;
         }
         .shape1 {
-            right: 0;
-            top: 50px;
+            right: .8rem;
+            top: 18rem;
             width: 300px;
             // padding-left: 5rem;
             opacity: .5;
@@ -85,7 +85,7 @@ h6 {
             animation: shape linear 30s infinite reverse;
         }
         .shape2 {
-            left: -5px;
+            left: 5rem;
             bottom: 14rem;
             width: 350px;
             padding-left: 5rem;
@@ -106,7 +106,7 @@ h6 {
             opacity: .4;
             transform-origin: center;
             animation: shape3 linear 20s infinite;
-            transform: translate(-200px, -100px) rotate(0deg);
+            transform: translate(-30rem, 5rem) rotate(0deg);
         }
         @keyframes shape3 {
             100% {
@@ -132,7 +132,7 @@ h6 {
             left: 500px;
             width: 120px;
             padding-left: 5rem;
-            opacity: 0;
+            opacity: 1;
             transform-origin: center;
             animation: shape5 linear 25s infinite;
             transform: translate(0, -150px) rotate(0deg);
