--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -31,11 +31,11 @@
             <ul class="navbar-nav">
 
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/"><span>&#60;</span>/Resume<span>&#62;</span></a>
+                    <a class="nav-link" href="https://nazila.codefactory.live/Nazila-AZABDAFTAR-Lebenslauf01-2023.pdf"><span>&#60;</span>/Resume<span>&#62;</span></a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" routerLink="/contact">Contact me</a>
-                </li>
+                </li>-->
                 <!-- <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="https://github.com/nazilaAz"><i class="bi bi-github"></i></a>
                 </li> -->
