--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -89,7 +89,7 @@ h5::before {
   font-size: 1em;
   font-weight: 600;
   color: #555;
-  line-height: 1.3rem;
+  line-height: 2.3rem;
 }
 .card .content .details h2 span {
   font-size: 0.75em;
@@ -100,6 +100,7 @@ h5::before {
   display: flex;
   justify-content: space-between;
   gap: 20px;
+  font-size: 0.8rem;
 }
 .card .content .details .actionBtn button {
   padding: 10px 30px;
