--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -93,7 +93,7 @@ h5 {
                 font-size: 1em;
                 font-weight: 600;
                 color: $color-gray;
-                line-height: 1.3rem;
+                line-height: 2.3rem;
                 span {
                     font-size: .75em;
                     font-weight: 500;
@@ -104,6 +104,7 @@ h5 {
                 display: flex;
                 justify-content: space-between;
                 gap: 20px;
+                font-size: .8rem;
                 button {
                     padding: 10px 30px;
                     border-radius: 5px;
