Project will add

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -79,18 +79,18 @@
         </div>
     </div>
     <div class="col">
-        <!--<div class="card">
+        <div class="card">
             <div class="imgBx">
-                <img src="../../assets/image/Biglibrary.png" class="card-img-top" alt="...">
+                <img src="../../assets/image/cone.png" class="card-img-top" alt="...">
             </div>
             <div class="content">
                 <div class="details">
-                    <h2>Vienna Event Managemet<br><span>Track Events</span></h2>
+                    <h2>New Project<br><span>Under Cunstraction</span></h2>
                     <div class="actionBtn">
-                        <button><a href="https://nazila.codefactory.live/BigLibrary/">Show more</a></button>
+                        <button disabled><a>Show more</a></button>
                     </div>
                 </div>
             </div>
-        </div>-->
+        </div>
     </div>
 </div>
