--- a/src/app/bothsideaside/bothsideaside.component.html
+++ b/src/app/bothsideaside/bothsideaside.component.html
@@ -8,7 +8,7 @@
             <i class="bi vline"></i> -->
 
             <ul class="social-networks bounce">
-                <li><a href="https://www.linkedin.com/" class="icon-linkedin">LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/nazila-azabdaftar" class="icon-linkedin">LinkedIn</a></li>
                 <!-- <li><a href="https://www.facebook.com/" class="icon-facebook">Facebook</a></li> -->
                 <li><a href="https://github.com/nazilaAz" class="icon-github">github</a></li>
                 <!-- <li><a href="https://pinterest.com" class="icon-pinterest">Pinterest</a></li> -->
