--- a/src/app/bothsideaside/bothsideaside.component.scss
+++ b/src/app/bothsideaside/bothsideaside.component.scss
@@ -145,7 +145,7 @@ $color_White: #fff;
         color: hsla(0, 0%, 100%, 1);
         overflow-x: hidden;
         padding: 0%;
-        // z-index: -1;
+        z-index: -1;
         p {
             writing-mode: vertical-rl;
             text-orientation: mixed;
