--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,11 +18,11 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/skill" routerLinkActive="active">My Skills</a>
                 </li>
-                <!--
+
                 <li class="nav-item">
                     <a class="nav-link" routerLink="/projects" routerLinkActive="active">Projects</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" routerLink="/test" routerLinkActive="test">Projects</a>
                 </li>-->
             </ul>
@@ -31,7 +31,7 @@
             <ul class="navbar-nav">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="https://nazila.codefactory.live/Nazila-AZABDAFTAR-Lebenslauf01-2023.pdf"><span>&#60;</span>/Resume<span>&#62;</span></a>
+                    <a class="nav-link" href="https://nazila.codefactory.live/Nazila-AZABDAFTAR-Lebenslauf01-2023.pdf"><span>&#60;</span>/CV<span>&#62;</span></a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" routerLink="/contact">Contact me</a>
