--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -33,9 +33,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="https://nazila.codefactory.live/Nazila-AZABDAFTAR-Lebenslauf01-2023.pdf"><span>&#60;</span>/CV<span>&#62;</span></a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" routerLink="/contact">Contact me</a>
-                </li>-->
+                <li class="nav-item">
+                    <a class="nav-link" href="mailto:azabdaftar@outlook.com?subject=contact&body = Message">Contact me</a>
+                </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="https://github.com/nazilaAz"><i class="bi bi-github"></i></a>
                 </li> -->
