--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,9 +19,9 @@
                     <a class="nav-link" routerLink="/skill" routerLinkActive="active">My Skills</a>
                 </li>
 
-                <li class="nav-item">
+                <!--<li class="nav-item">
                     <a class="nav-link" routerLink="/projects" routerLinkActive="active">Projects</a>
-                </li>
+                </li>-->
                 <!-- <li class="nav-item">
                     <a class="nav-link" routerLink="/test" routerLinkActive="test">Projects</a>
                 </li>-->
