--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -23,7 +23,7 @@
             <h5>Full-Stack Developer</h5>
             <h1>Nazila</h1>
             <p>I’m a Computer software engineer and i have 10 years experience in programming in my home country IRAN.<br> Currently,as Web-Developer i’m focused on Frontend and Backend.</p>
-            <a href="/projects" class="btn">My Works</a>
+            <a routerLink="/projects" class="btn">My Works</a>
 
         </div>
         <img src="../../assets/image/iam.png">
